<resources>
    <string name="app_name">WS Partner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">ActivityLogin</string>

    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="fp">Forgot Pasword?</string>
    <string name="account">No Account yet? Create by click here</string>
    <string name="or">OR</string>
    <string name="title_activity_registration">ActivityRegistration</string>

    <string name="registration">Registration</string>
    <string name="fname">Enter First Name</string>
    <string name="mname">Enter Middle Name</string>
    <string name="lname">Enter Last Name</string>
    <string name="mno">Enter Mobile Number</string>
    <string name="cpassword">Enter Confirm Password</string>
    <string name="title_activity_home_page_tab">HomePageTabActivity</string>

    <string name="verify">Verify OTP</string>
    <string name="enterotp">Enter OTP</string>

    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="newpass">Enter New Password</string>

    <string name="title_activity_new_lead_fragment">NewLeadFragment</string>
    <string name="newlead">New Leads</string>
    <string name="home">Home</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="reason">Write reason here</string>

    <string name="title_activity_new_lead_detail">NewLeadDetailActivity</string>
    <string name="leaddetail">Lead Detail</string>
    <string name="charges">Charges Details</string>
    <string name="service_person">Service Person ID :</string>
    <string name="minimum_charges">Minimum Charges :</string>

    <string name="title_activity_my_profile_fragment">My Profile</string>
    <string name="txt_setProfile">Set Profile</string>
    <string name="txt_clickPhoto">Click Photo</string>
    <string name="txt_useGallery">Use Gallery</string>
    <string name="identity">Identity Verification</string>
    <string name="aboutme">About me</string>
    <string name="service_location">Add your Service Location</string>
    <string name="bank_detail">Bank Details</string>
    <string name="step">Complete these steps to get New Leads</string>
    <string name="title_activity_identity_proof">identity_proof</string>

    <string name="title_activity_about_me">ActivityAboutMe</string>
    <string name="changemobile">Change Mobile</string>
    <string name="changepass">Change Password</string>
    <string name="update">Update</string>

    <string name="title_activity_service_location">ActivityServiceLocation</string>
    <string name="current">Current Location</string>

    <string name="title_activity_bank_detail">ActivityBankDetail</string>
    <string name="bankdetal">Add Your Bank Detail</string>
    <string name="name">Enter Name (On Basis of Bank)</string>
    <string name="accountno">Enter Your Account Number</string>
    <string name="ifsc">Enter IFSC code</string>
    <string name="save">SAVE</string>

    <string name="title_activity_menu_fragment">MenuFragment</string>
    <string name="menu">Menu</string>
    <string name="pan">PAN and Bank Details</string>
    <string name="share">Share</string>
    <string name="credits">Credits</string>
    <string name="insurence">Insurance</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="download">Download our Customer Partener App</string>
    <string name="rate">Rate Us</string>
    <string name="logout">LOGOUT</string>
</resources>
