<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_35sdp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="activity.authentication.registration.RegistrationActivity"
            tools:showIn="@layout/activity_registration"
            android:background="@color/black"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_17sdp"
                android:id="@+id/title"
                fontPath="font/TxtBold.ttf">
            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fname"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_below="@+id/title"
                app:errorTextAppearance="@style/error_appearance"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fname"
                    android:id="@+id/fname2"
                    android:inputType="text"
                    style="@style/EditTextBaseStyle" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lname"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_below="@+id/fname"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lname"
                    android:id="@+id/lname2"
                    android:inputType="text"
                    style="@style/EditTextBaseStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_below="@+id/lname"
                style="@style/error_appearance"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/email2"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextBaseStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:id="@+id/mobile"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorTextAppearance="@style/error_appearance"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mno"
                    android:id="@+id/mobile2"
                    android:inputType="number"
                    style="@style/EditTextBaseStyle"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                android:layout_below="@+id/mobile"
                android:id="@+id/pass"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorTextAppearance="@style/error_appearance"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:id="@+id/pass2"
                    style="@style/EditTextBaseStyle"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                android:layout_below="@+id/pass"
                android:id="@+id/cpass"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorTextAppearance="@style/error_appearance"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpassword"
                    android:id="@+id/cpass2"
                    android:inputType="textPassword"
                    style="@style/EditTextBaseStyle"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cpass"
                android:id="@+id/profession"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorTextAppearance="@style/error_appearance"
                app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professsion2"
                    style="@style/EditTextBaseStyle"
                    android:entries="@array/profession"
                    android:popupBackground="@color/black">
                </androidx.appcompat.widget.AppCompatSpinner>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/transwhite"
                android:id="@+id/sub"
                android:layout_below="@+id/profession"
                android:layout_marginTop="@dimen/_30sdp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</layout>